src/test/deca/codegen/valid/created/testOpArith/times.deca
// Description :
//    Test d'une opération de multiplication
//
// Résultats :
//    3


{
    int x = 1;
    int y = 3;
    int mult = x * y;
    println(12);
}


