src/test/deca/codegen/invalid/created/testOpArith/multiplyOverlFlow.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12: Resulat de multiplication depasse les 32 bits.
// 


{
    int alpha  = 2147483647*2; 
    println(alpha);
}